fix: improve readability

--- a/src/styles/bg-mesh.css
+++ b/src/styles/bg-mesh.css
@@ -2,7 +2,7 @@
   0% {
     --s-start-0: 8%;
     --s-end-0: 83%;
-    --c-0: hsla(220, 77%, 32%, 1);
+    --c-0: hsla(220, 77%, 25%, 1);
     --y-0: 69%;
     --x-0: 57%;
     --y-1: 39%;
@@ -10,7 +10,7 @@
     --x-1: 98%;
     --s-start-1: 1%;
     --s-end-1: 80%;
-    --c-2: hsla(170, 85%, 27%, 1);
+    --c-2: hsla(170, 85%, 22%, 1);
     --x-2: 35%;
     --y-2: 56%;
     --s-start-2: 12%;
@@ -18,9 +18,9 @@
     --x-3: 70%;
     --s-start-3: 18%;
     --s-end-3: 71%;
-    --c-3: hsla(214, 92%, 27%, 1);
+    --c-3: hsla(214, 92%, 22%, 1);
     --y-3: 82%;
-    --c-4: hsla(169, 64%, 44%, 1);
+    --c-4: hsla(169, 64%, 30%, 1);
     --s-start-4: 6%;
     --s-end-4: 72%;
     --y-4: 84%;
@@ -71,7 +71,7 @@
 @property --c-0 {
   syntax: "<color>";
   inherits: false;
-  initial-value: hsla(220, 77%, 32%, 1);
+  initial-value: hsla(220, 77%, 25%, 1);
 }
 
 @property --y-0 {
@@ -119,7 +119,7 @@
 @property --c-2 {
   syntax: "<color>";
   inherits: false;
-  initial-value: hsla(170, 85%, 27%, 1);
+  initial-value: hsla(170, 85%, 22%, 1);
 }
 
 @property --x-2 {
@@ -167,7 +167,7 @@
 @property --c-3 {
   syntax: "<color>";
   inherits: false;
-  initial-value: hsla(214, 92%, 27%, 1);
+  initial-value: hsla(214, 92%, 22%, 1);
 }
 
 @property --y-3 {
@@ -179,7 +179,7 @@
 @property --c-4 {
   syntax: "<color>";
   inherits: false;
-  initial-value: hsla(169, 64%, 44%, 1);
+  initial-value: hsla(169, 64%, 30%, 1);
 }
 
 @property --s-start-4 {
@@ -207,19 +207,19 @@
 }
 
 .bg-mesh {
-  --c-0: hsla(220, 77%, 32%, 1);
+  --c-0: hsla(220, 77%, 25%, 1);
   --y-0: 69%;
   --x-0: 57%;
   --y-1: 39%;
-  --c-1: hsla(261, 70%, 22%, 1);
+  --c-1: hsla(261, 70%, 15%, 1);
   --x-1: 98%;
-  --c-2: hsla(170, 85%, 27%, 1);
+  --c-2: hsla(170, 85%, 22%, 1);
   --x-2: 35%;
   --y-2: 56%;
   --x-3: 70%;
-  --c-3: hsla(214, 92%, 27%, 1);
+  --c-3: hsla(214, 92%, 22%, 1);
   --y-3: 82%;
-  --c-4: hsla(169, 64%, 44%, 1);
+  --c-4: hsla(169, 64%, 30%, 1);
   --y-4: 84%;
   --x-4: 40%;
   background-color: hsla(262, 82%, 3%, 1);
@@ -250,7 +250,7 @@
       transparent var(--s-end-4)
     );
   background-attachment: fixed;
-  animation: hero-gradient-animation 15s linear infinite alternate;
+  animation: hero-gradient-animation 40s linear infinite alternate;
   background-blend-mode: normal, normal, normal, normal, normal;
 
   @media (prefers-reduced-motion: reduce) {
